--- a/_plays/02.md
+++ b/_plays/02.md
@@ -1,22 +1,17 @@
 ---
 play_number: 2
-title: Copy other projects
+title: Consider the Developer Experience (DX)
 ---
 
-There are many 
+The web service APIs are basic infrastructure.  They are the roads that developers will drive on.  Ensure that the roads are well-designed.  It should be a natural joy to use the APIs.  Consider the experience of the users, and the use will follow.
 
 ### Checklist
-1. 
-2. 
-3. 
-4. 
-5. 
-6. 
-7. 
+1. Reference design standards for building a good API, like the [White House API standards](https://github.com/WhiteHouse/api-standards) or [Code Planet's P of API design](https://codeplanet.io/principles-good-restful-api-design).
+2. Ensure consistency across resources.  For example, don't use country codes in one query and country names in another.
+3. Sit with a user and take notes on how easy it is to use the API -- and then iterate.  
+
 
 ### Key Questions
-- 
-- 
-- 
-- 
-- 
+- When talking to users of the API, do they think it feels well-designed?  Does it have good bones?  Does it inspire trust?
+- Do users get stuck in the same place over and over again?
+- What would [Bostock](https://github.com/mbostock) do?  WWBD?
