--- a/_plays/03.md
+++ b/_plays/03.md
@@ -1,21 +1,18 @@
 ---
 play_number: 3
-title: Bring in experienced and diverse teams
+title: Be an upstanding citizen of the web
 ---
 
-Good work can't get done without good people.  Don't underestimate the return on investing in a good team with many perspectives and multiple talents.  
+The highest form of courtesy on the web, just as in driving, is efficiency and dependability.  Surprises and ambiguities lead to crashes.  Natural, simple, and dependable APIs can create a vibrant ecosystem of applications that can change the world. Believe that. 
 
 ### Checklist
-1. Teammates with high-traffic digital services.
-2. Member(s) of the team have experience building popular, high-traffic digital services
-2. Member(s) of the team have experience designing mobile and web applications
-3. Member(s) of the team have experience using automated testing frameworks
-4. Member(s) of the team have experience with modern development and operations (DevOps) techniques like continuous integration and continuous deployment
-5. Member(s) of the team have experience securing digital services
-6. A Federal contracting officer is on the internal team if a third party will be used for development work
-7. A Federal budget officer is on the internal team or is a partner
-8. The appropriate privacy, civil liberties, and/or legal advisor for the department or agency is a partner
+1. All URL enpoints should be durable, even when changes are made to the web service.  This may require versioning your APIs.
+2. Write the URL endpoints so that they are human readable.  
+3. Avoid using randomly generated strings or hashes in the URL, if your API is purely `GET` requests.  These aren't readable.
+4. Use HTTP status codes.  [TODO: add REFERENCE]
+5. Ensure that the APIs (or at least the documentation) are discoverable on the web.
+6. Employ SEO so that people can find them. [TODO: add more]
 
 ### Key Questions
-
-- Are there
+- What happens when you add a new resource?  Will it alter existing endpoints?  And will those alterations break a dependent app?
+- Can you explain the structure of the URL in less than a minute?  Will a user be able to adjust an example query without guidance?
