--- a/_plays/04.md
+++ b/_plays/04.md
@@ -1,17 +1,16 @@
 ---
 play_number: 4
-title: Choose a modern technology stack
+title: Be a part of the community and ask for help
 ---
 
-The technology decisions we make need to enable development teams to work efficiently and enable services to scale easily and cost-effectively. Our choices for hosting infrastructure, databases, software frameworks, programming languages and the rest of the technology stack should seek to avoid vendor lock-in and match what successful modern consumer and enterprise software companies would choose today. In particular, digital services teams should consider using open source, cloud-based, and commodity solutions across the technology stack, because of their widespread adoption and support by successful consumer and enterprise technology companies in the private sector.
+There are developers eager to help.  Working on the SDGs feels important, much more important than selling ads or optimizing sales.  If you don't understand something, ask the community.  Even asking the question in an open, persistent forum is a contribution to the open source community.  And if you are an advanced developer, contribute to the open source community! 
 
 ### Checklist
-1. Choose software frameworks that are commonly used by private-sector companies creating similar services
-2. Whenever possible, ensure that software can be deployed on a variety of commodity hardware types
-3. Ensure that each project has clear, understandable instructions for setting up a local development environment, and that team members can be quickly added or removed from projects
-4. [Consider open source software solutions](http://www.whitehouse.gov/sites/default/files/omb/assets/egov_docs/memotociostechnologyneutrality.pdf) at every layer of the stack
+1. Visit the issues page *of this site* for this project with any questions about how to start.  Example issues are available [here]().  
+2. Visit [Stack Overflow] or join a global development [Google Group] to ask for help.  
+3.  The Global Partnership [Marketplace]() will be a forum to raise needs for technical support or application development.  You are among friends and family here.
+
 
 ### Key Questions
-- What is your development stack and why did you choose it?
-- Which databases are you using and why did you choose them?
-- How long does it take for a new team member to start developing?
+- Do you know where to go to ask for help?  If not, visit the issues page for this repository.  Sign up for a free [Github account](), and pose a question to the group.
+- Have you written anything for your app that might be useful to another app?  If so, and when appropriate, can you contribute the code on an open source project?
