--- a/_plays/05.md
+++ b/_plays/05.md
@@ -1,24 +1,17 @@
 ---
 play_number: 5
-title: Default to open
+title: Build trust
 ---
 
-When we collaborate in the open and publish our data publicly, we can improve SDG data infrastructure together. By building services more openly and publishing open data, we simplify the public’s access to civic services and information, allow the public to contribute easily, and enable reuse by entrepreneurs, nonprofits, other agencies, and the public.
+You are providing a service to external users via the web -- a web service.  Ensuring that there are developers on the other end willing to use that service requires a reasonably high level of trust.  If they build something today, can they use it tomorrow?  Building and maintaining trust through openness, communication, licensing, and setting appropriate expectations is important for sustained use.
+
 
 ### Checklist
-1. Offer users a mechanism to report bugs and issues, and be responsive to these reports
-2. Provide datasets to the public, in their entirety, through bulk downloads and APIs (application programming interfaces)
-3. Ensure that data from the service is explicitly in the public domain, and that rights are waived globally via an international public domain dedication, such as the “Creative Commons Zero” waiver
-4. Catalog data in the agency’s enterprise data inventory and add any public datasets to the agency’s public data listing
-5. Ensure that we maintain the rights to all data developed by third parties in a manner that is releasable and reusable at no cost to the public
-6. Ensure that we maintain contractual rights to all custom software developed by third parties in a manner that is publishable and reusable at no cost
-7. When appropriate, create an API for third parties and internal users to interact with the service directly
-8. When appropriate, publish source code of projects or components online
-9. When appropriate, share your development process and progress publicly
+1. Default to open licensing.  Default to open everything.
+2. Clarify what sort of applications the web service will support, e.g., list rate limits or constraints on origin headers.
+3. Build in a monitor for API downtime. 
+4. Be very explicit about the uncertainty surrounding the data, and the implied limitations on applications. 
 
 ### Key Questions
-- How are you collecting user feedback for bugs and issues?
-- If there is an API, what capabilities does it provide? Who uses it? How is it documented?
-- If the codebase has not been released under an open source license, explain why.
-- What components are made available to the public as open source?
-- What datasets are made available to the public?
+- Are the limitations on both the service and supporting data immediately apparent?
+- Is it easy to find where users can go to interact with a human?  Like is there a Google Group or a Github repository linked to the service?
