--- a/_plays/06.md
+++ b/_plays/06.md
@@ -3,10 +3,11 @@ play_number: 6
 title: Consider the future
 ---
 
-The United Nations has resolved, between now and 2030, over the next 15 years, to end poverty and hunger everywhere.  Does your data infrastructure have a 15 year plan?  Listen, we are working on the biggest problems of our time, which will ... take time.  Build your infrastructure to last.
+The United Nations has resolved, between now and 2030, over the next 15 years, to end poverty and hunger everywhere.  Does your data infrastructure have a 15 year plan?  Build your infrastructure to last.
 
 ### Checklist
-1. 
+1. Design the URL structure for extensibility.  You shouldn't have to redesign the URL entirely when a new resource is added.
+2. Incorporate versioning into the URL structure, e.g., `api.data.org/v1/kenya/poverty`.  This is a humble nod to the inevitable edits to the API.
 
 ### Key Questions
 - 
