--- a/_plays/08.md
+++ b/_plays/08.md
@@ -8,7 +8,7 @@ The technology decisions we make need to enable development teams to work effici
 ### Checklist
 1. Choose software frameworks that are commonly used by private-sector companies creating similar services
 2. Whenever possible, ensure that software can be deployed on a variety of commodity hardware types
-3. Ensure that each project has clear, understandable instructions for setting up a local development environment, and that team members can be quickly added or removed from projects
+3. Ensure that each project has clear, understandable instructions for setting up a local development environment, and that team members can be quickly added to or removed from projects
 4. [Consider open source software solutions](https://www.obamawhitehouse.gov/sites/default/files/omb/assets/egov_docs/memotociostechnologyneutrality.pdf) at every layer of the stack
 
 ### Key Questions
