--- a/_plays/04.md
+++ b/_plays/04.md
@@ -8,7 +8,7 @@ We should use an incremental, fast-paced style of software development to reduce
 ### Checklist
 1. Ship a functioning “minimum viable product” (MVP) that solves a core user need as soon as possible, no longer than three months from the beginning of the project, using a “beta” or “test” period if needed
 2. Run usability tests frequently to see how well the service works and identify improvements that should be made
-3. Ensure the individuals building the service communicate closely using techniques such as launch meetings, war rooms, daily standups, and team chat tools
+3. Ensure the individuals building the service communicate closely using techniques such as launch meetings, strategy rooms, daily standups, and team chat tools
 4. Keep delivery teams small and focused; limit organizational layers that separate these teams from the business owners
 5. Release features and improvements multiple times each month
 6. Create a prioritized list of features and bugs, also known as the “feature backlog” and “bug backlog”
