--- a/_plays/01.md
+++ b/_plays/01.md
@@ -1,25 +1,20 @@
 ---
 play_number: 1
-title: Understand what people need
+title: Phase 1: Orientation
 ---
 
-We must begin digital projects by exploring and pinpointing the needs of the people who will use the service, and the ways the service will fit into their lives. Whether the users are members of the public or government employees, policy makers must include real people in their design process from the beginning. The needs of people — not constraints of government structures or silos — should inform technical and design decisions. We need to continually test the products we build with real people to keep us honest about what is important.
+The first phase is about creating a solid foundation for buying and using digital products. Capacity-building starts long before there is any specific software project. Product owners should spend time meeting staff members from various departments, hosting Q&A workshops, debunking myths about government procurement, establishing common language (“agile” “DevOps” “exclusionary criteria”), and sharing the basics of agile software development. The goal is to build up your colleagues’ familiarity with three main things: first, with the steps and objectives of legitimate public sector procurement; second, with contemporary software development processes; and third, with effective design research methods. 
 
-### Checklist
-1. Early in the project, spend time with current and prospective users of the service
-2. Use a range of qualitative and quantitative research methods to determine people’s goals, needs, and behaviors; be thoughtful about the time spent
-3. Test prototypes of solutions with real people, in the field if possible
-4. Document the findings about user goals, needs, behaviors, and preferences
-5. Share findings with the team and agency leadership
-6. Create a prioritized list of tasks the user is trying to accomplish, also known as "user stories"
-7. As the digital service is being built, regularly test it with potential users to ensure it meets people’s needs
+With a shared foundation, we are ready to begin a specific software process. The next step is to use discovery research methods to understand the challenge or opportunity, define user needs, and develop ideas about potential solutions. The goal is to arrive at a precise problem statement.
 
-### Key Questions
-- Who are your primary users?
-- What user needs will this service address?
-- Why does the user want or need this service?
-- Which people will have the most difficulty with the service?
-- Which research methods were used?
-- What were the key findings?
-- How were the findings documented? Where can future team members access the documentation?
-- How often are you testing with real people?
+A good sense of the problem allows us to evaluate potential solutions that might already exist in the market – including off-the-shelf software and open source software (OSS). If nothing good exists, the problem statement also helps with estimating the costs of building software in-house, adapting OSS, or contracting a custom solution. 
+
+These options should be evaluated in a neutral way, accounting not only for cost, but also for quality, long-term lifecycle costs of ownership and maintenance, and potential unforeseen concerns like vendor lock-in and data ownership. 
+
+Phase 1 ends with a choice of strategy. Depending on the approach, you will follow one of four paths...
+
+### Paths
+1. Buy Software off the shelf
+2. Contract a vendor to build a custom instance of open source software (OSS)
+3. Contract a vendor to build custom software
+4. Build software (or adapt OSS) in-house 
