--- a/_plays/02.md
+++ b/_plays/02.md
@@ -1,19 +1,42 @@
 ---
-play_number: 2
-title: Address the whole experience, from start to finish
+play_number: 1.a
+title: Capacity Building
 ---
 
-We need to understand the different ways people will interact with our services, including the actions they take online, through a mobile application, on a phone, or in person. Every encounter — whether it's online or offline — should move the user closer towards their goal.
+### Goals
+- To align various departments and facilitate future collaboration.
+- To share basic knowledge of software procurement and development processes.
+- To prioritize a new role: the product owner.
+
+
+### Plays
+_Reaching out to individuals and departments:_
+Several individuals, departments and agencies need to build new skills and adapt their day to day role in order to effectively support software procurement: digital or IT; any number of direct service delivery departments (e.g. traffic and parking); procurement, budgeting or accounting; legal.
+- Reach out to individuals in these different teams and begin discussing how they could contribute to future software procurement processes.
+
+_Building basic familiarity with software and software procurement:_
+Everyone involved needs to be able to: asking the right questions, identify the right outcomes, and have a basic knowledge of the fundamental principles of modern software design.
+- Read through this guide, as well as the additional resources in sections that you are responsible for. If you are the project manager, you should be an expert of the process, and answer questions for others. 
+- Look at past (software) procurement processes. How have they gone wrong? How have they been successful? Don’t speculate – actually ask users who use that product or who were involved with procuring it. 
+
+_Training and designating product owners:_
+The most important figure in an effective software procurement is the product owner (a.k.a. “project manager” or “business analyst”). This person shepherds the procurement process. They will be working across and independently from existing business units. They embed with a department (end users) and bring back specific requirements. They have analytical and design thinking skills.
+- Hire or train one or more product owners.
+
+_Hosting workshops and finding champions:_
+Capacity building should happen long before any given procurement starts. 
+- Host regular, city-wide workshops about the basics of procurement. Demystify the process. Emphasize the opportunities for acquiring better products and services, simplicity, efficiency, and creativity. 
+- Designate a procurement innovation lead (this could be a product owner) who can check in with department heads or business unit leaders and provide targeted assistance.
+
+
+### Common Challenges
+- _Departmental silos._ Software procurement falls between existing business unit siloes (e.g. Legal, IT, Service delivery, Budgeting / Procurement). Who owns a process? Transitioning to cross-departmental protocols and standards requires process change management that is independent of the implicated departments.
+- _Inadequate or obsolete job descriptions._ There is no formal role or job description for a “product owner” – particularly one focused on software – in the public sector.
+- _Insufficient time._ Staff who could learn from and contribute to ongoing conversations about procurement process reform do not have the time to attend workshops and contribute, in addition to their daily job requirements.
+- _Divergent or conflicting departmental agendas._ These cause misalignment in priorities and friction before and during the software procurement and development process.
+
 
 ### Checklist
-1. Understand the different points at which people will interact with the service – both online and in person
-2. Identify pain points in the current way users interact with the service, and prioritize these according to user needs
-3. Design the digital parts of the service so that they are integrated with the offline touch points people use to interact with the service
-4. Develop metrics that will measure how well the service is meeting user needs at each step of the service
-
-
-### Key Questions
-- What are the different ways (both online and offline) that people currently accomplish the task the digital service is designed to help with?
-- Where are user pain points in the current way people accomplish the task?
-- Where does this specific project fit into the larger way people currently obtain the service being offered?
-- What metrics will best indicate how well the service is working for its users?
+1. Regular multi-departmental workshops and supporting materials.
+2. Well-trained product owners.
+3. Basic familiarity with software development methods across the organization.
