--- a/_plays/02.md
+++ b/_plays/02.md
@@ -4,9 +4,9 @@ title: Capacity Building
 ---
 
 ### Goals
-- To align various departments and facilitate future collaboration.
-- To share basic knowledge of software procurement and development processes.
-- To prioritize a new role: the product owner.
+1. To align various departments and facilitate future collaboration.
+2. To share basic knowledge of software procurement and development processes.
+3. To prioritize a new role: the product owner.
 
 
 ### Plays
@@ -40,3 +40,14 @@ Capacity building should happen long before any given procurement starts.
 1. Regular multi-departmental workshops and supporting materials.
 2. Well-trained product owners.
 3. Basic familiarity with software development methods across the organization.
+
+
+### References
+18F: Derisking Guide
+https://derisking-guide.18f.gov/state-field-guide/
+
+18F: A Day in the Life of an 18F Product Owner
+https://18f.gsa.gov/2017/09/18/a-day-in-the-life-of-an-18f-product-owner/
+
+Teaching Public Service in the Digital Age: The Digital Era Competencies
+https://www.teachingpublicservice.digital/en/competencies
