--- a/_plays/04.md
+++ b/_plays/04.md
@@ -1,29 +1,83 @@
 ---
-play_number: 4
-title: Build the service using agile and iterative practices
+play_number: 1.c
+title: Market Research
 ---
 
-We should use an incremental, fast-paced style of software development to reduce the risk of failure. We want to get working software into users’ hands as early as possible to give the design and development team opportunities to adjust based on user feedback about the service. A critical capability is being able to automatically test and deploy the service so that new features can be added often and be put into production easily.
+### Goals
+1. To become familiar with the problem and the landscape of potential solutions.
+2. To engage responsibly with experts, civic tech community, and the vendor pool.
+3. To circulate the problem statement to experts.
+4. To establish internal and external benchmarks.
+
+
+### Plays
+_Scanning the landscape:_
+
+Become familiar with the world of experts, civic tech enthusiasts and vendors. And let them become familiar with you! Discuss the problems you are trying to solve, and hear their thoughts on existing or potential solutions.  
+- Market research and neutral market analysis of existing commercial solutions
+- Look at how other cities have addressed the same / similar problems
+- Call for ideas (informally, in the civic tech community)
+- Issue a Request for Information (RFI) (formally, through city channels)
+- Host an event related to the problem and invite community groups and vendors
+- Reach out to the academic sector
+- …?  (this is an opportunity for creativity!)
+
+
+_Identifying types of vendors:_
+
+There are six different types of custom software development companies. These are: Enterprise, Big Business, Mid-Market, Small, Freelance, Off-shore.
+- Explore the market in each of these categories.
+
+
+_Setting internal and external benchmarks:_ 
+
+Become familiar with peers and precedents. If there are other cities that have already solved the problem, consider licensing or partnership. If there are other cities that need to solve the same problem, consider pooling resources in a bilateral agreement. 
+- What have prior software projects cost (to procure and to maintain)? Have they been successful? 
+- What do other cities use to solve the same problem? Is their software open source?
+- What do businesses use to solve the same problem?
+
+
+_Creating a market analysis report:_ 
+
+Document what you find, in a clear, neutral and objective way.
+- Market maturity (number and size of potential providers)
+- Commercial readiness (reliability of solutions)
+- Number of comparable software solutions, their business models and approaches.
+- Consult libraries of Open Source Software (OSS) and resources provided by higher levels of government (e.g. The US GSA, Data.Gov, the Canadian Digital Service)
+
+
+_Knowing who can deliver:_ 
+
+In some cases, there is only one vendor that can deliver the required solution – but those cases are rare. In general, competition is a good thing for RFPs. The Association of Certified Fraud Examiners has good resources to guide your rationale for sole-sourcing. 
+- Identify the landscape of vendors who could fulfill the project needs you’ve documented.
+
+
+### Common Challenges
+- _Lack of internal consistency and digital integration._ Most city governments work with a patchwork of systems. That means they need to use, maintain, and modernize legacy systems simultaneously.
+- _Hesitancy to engage directly with vendors._ Civil servants feel that engaging with vendors is dangerous. It isn’t. Get to know the local and international software community. Become familiar with certain companies you respect. Be actively involved and ask questions.
+- _Insufficient communications between cities._ Civil servants rarely engage with peers (adjacent municipalities or ones that have key commonalities). By discussing mutual challenges, you might find existing solutions, receive recommendations, or glean best practices.
+
 
 ### Checklist
-1. Ship a functioning “minimum viable product” (MVP) that solves a core user need as soon as possible, no longer than three months from the beginning of the project, using a “beta” or “test” period if needed
-2. Run usability tests frequently to see how well the service works and identify improvements that should be made
-3. Ensure the individuals building the service communicate closely using techniques such as launch meetings, strategy rooms, daily standups, and team chat tools
-4. Keep delivery teams small and focused; limit organizational layers that separate these teams from the business owners
-5. Release features and improvements multiple times each month
-6. Create a prioritized list of features and bugs, also known as the “feature backlog” and “bug backlog”
-7. Use a source code version control system
-8. Give the entire project team access to the issue tracker and version control system
-9. Use code reviews to ensure quality
+1. Internal and external benchmarks.
+2. Market analysis and report (including a list of available software, vendors, and business models).
 
 
-### Key Questions
-- How long did it take to ship the MVP? If it hasn't shipped yet, when will it?
-- How long does it take for a production deployment?
-- How many days or weeks are in each iteration/sprint?
-- Which version control system is being used?
-- How are bugs tracked and tickets issued? What tool is used?
-- How is the feature backlog managed? What tool is used?
-- How often do you review and reprioritize the feature and bug backlog?
-- How do you collect user feedback during development? How is that feedback used to improve the service?
-- At each stage of usability testing, which gaps were identified in addressing user needs?
+### References
+Building and Buying Custom Software Guide
+https://code.gov/agency-compliance/compliance/procurement
+
+Fullstack Labs: Software Development Price Guide and Hourly Rate Comparison
+https://www.fullstacklabs.co/blog/software-development-price-guide-hourly-rate-comparison
+
+Methods of Market Engagement
+https://medium.com/citymartinsights/unit-3-choosing-your-procurement-path-8e1b711d0268
+
+Networked Improvement Community
+https://www.carnegiefoundation.org/blog/why-a-nic/
+
+CityMart Market Research Worksheet
+https://docs.google.com/document/d/1TqDwLfeu0GuFbAos5hBtV-0fJTgXnANv4i4Iqt7Zrcs/edit?usp=sharing
+
+Boston Sample RFI
+https://drive.google.com/file/d/1GJUo6kR9zWmxF4835kHvSq0Rq7QuMLI-/view?usp=sharing
